# Speedups

./: .gitignore  LICENSE  README.md  Speedups.sublime-workspace
image_processing/: .gitignore  CMakeLists.txt  image_processor.cpp  image_processor2.cpp
image_processor/: .gitignore  CMakeLists.txt  image_processor.cpp
image_processor/Basic/: CMakeLists.txt  image_processor.cpp
image_processor/OpenMP/: CMakeLists.txt  image_processor.cpp
image_processor/Optimize/: CMakeLists.txt  image_processor.cpp
image_processor/Optimize2/: image_processor.cpp
image_processor/OptimizedWithOpenMP/: CMakeLists.txt  image_processor.cpp
misc/: autovec_test.cpp
